--- a/portfolio.html
+++ b/portfolio.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Portfolio</title>
         <link rel="stylesheet" type="text/css" href="assets/css/portfolio.css" />
     </head>
@@ -9,16 +10,16 @@
     <body>
         
             <header>
-                    <h1>
-                        Jaspinder Singh
-                    </h1>
-                    <div class="nav">
-                        <ul>
-                        <li><a href="index.html">About</a></li>
-                        <li><a href="portfolio.html">Portfolio</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                        </ul>
-                    </div>
+                <h1>
+                    Jaspinder Singh
+                </h1>
+                <div class="nav">
+                    <ul>
+                    <li><a href="index.html">About</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                </div>
             </header>
 
             <div class="background_img">
