updated media queries

--- a/index.html
+++ b/index.html
@@ -1,72 +1,48 @@
 <!doctype html>
-<html>
+<html lang="en-us">
 
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>My Portfolio</title>
-        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About | Your Name</title>
+  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+</head>
 
-    </head>
+<body>
 
-        <body>            
-                <header>
-                    <h1>
-                        Jaspinder Singh
-                    </h1>
-                        <div class="nav">
-                            <ul>
-                            <li><a href="index.html">About</a></li>
-                            <li><a href="portfolio.html">Portfolio</a></li>
-                            <li><a href="contact.html">Contact</a></li>
-                            </ul>
-                        </div>
-                </header>
+  <header id="masthead">
+    <div class="container">
+      <a href="index.html" id="logo">Jaspinder </a>
+      <nav>
+        <a href="index.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </div>
+  </header>
 
-            
-            <div class="background_img">
-               
-                <section class="main_content">
+  <div id="main-container" class="container">
+    <section class="main-section">
+      <h1>About Me</h1>
 
-                    <div class="about_me">
-                    About Me
-                    </div>
+      <img src="assets/images/jazzy1.jpg" class="auth-image" alt="Your Name">
 
-                    <div class="hline1">
+      <p>Welcome to my personal website! Here, you will learn a great deal about myself and my journey through web development. As you can infer, this is my first website and it is developed from scratch. I intend to make this website as enjoyable as possible by including various styles and formats.</p>
 
-                    </div>
+      <p>In one week, I have learned how to use git, github, gitlab, and gitbash. Admittedly, I feel like a hacker using gitbash to run commands. Finally, I have command over my computer! I have thoroughly enjoyed learning new material through this program and continue to look forward to following classes.</p>
 
-                    <img src="assets/images/jazzy1.jpg" alt="jazzypic" id="my_pic" > 
+      <p>Please share your feedback about my website so, I can become a better developer. I prefer to learn through trial and error because I have found that is the best way to learn and test my knowledge. All types of criticism are welcomed.</p>
 
-                    <p class="p1">
-                        Welcome to my personal website! Here, you will learn a great deal about myself and my journey
-                        through web development. As you can infer, this is my first website and it is developed from
-                        scratch. I intend to make this website as enjoyable as possible by including various styles 
-                        and formats.
-                    </p>
+    </section>
 
-                    <p class="p2">
-                        In one week, I have learned how to use git, github, gitlab, and gitbash. Admittedly, I feel 
-                        like a hacker using gitbash to run commands. Finally, I have command over my computer!
-                        I have thoroughly enjoyed learning new material through this program and continue to look
-                        forward to following classes.
-                    </p>
+  </div>
 
-                    <p class="p3">
-                        Please share your feedback about my website so, I can become a better developer.  I prefer to learn 
-                        through trial and error because I have found that is the best way to learn and test my knowledge.
-                        All types of criticism are welcomed.
-                    </p>
+  <footer>
+    <div class="container">
+      Copyright &copy; 
+    </div>
+  </footer>
+</body>
 
-
-                </section>
-
-            </div>
-
-            <div class="footer">
-                    Copyright ©
-            </div>
-
-        </body>   
-
-</html>  
+</html>
